tests/NormalTests/paczka1/fuzzy1/83416079.err
Error in line 8: ghWTHsxdcv A286 88,5
Error in line 4: PoEeP A286 60,4
Error in line 9: E4Xpm9uo5o A286 81,7
Error in line 13: fd48mJOyzO5 A286 87,2
Error in line 21: fd48mJOyzO5 S767 52,3
Error in line 20: VcIU A286 45,1
Error in line 28: ghWTHsxdcv S368 80,5
Error in line 33: E4Xpm9uo5o A286 30,6
Error in line 34: PoEeP A286 80,4
Error in line 31: ghWTHsxdcv S767 28,3
